caralhada de coisa

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
 /DetetiveServer/nbproject/private/
 Detetive/nbproject/private/private.xml
 Detetive/nbproject/private/private.xml
+/DetetiveServer/dist/
+/Detetive/dist/
